--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.didactapp.android.cloudlibrary">
+    package="com.didactapp.commons.cloudlibrary">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <activity android:name=".activities.SplashActivity">
+        <activity android:name="com.didactapp.commons.cloudlibrary.activities.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -21,9 +21,9 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".activities.BooksActivity" />
+        <activity android:name="com.didactapp.commons.cloudlibrary.activities.BooksActivity" />
 
-        <activity android:name=".activities.DetailActivity" />
+        <activity android:name="com.didactapp.commons.cloudlibrary.activities.DetailActivity" />
 
     </application>
 
